@@ -27,6 +27,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static com.example.backend.domain.define.study.member.constant.StudyMemberRole.STUDY_LEADER;
 import static com.example.backend.domain.define.study.member.constant.StudyMemberStatus.STUDY_ACTIVE;
@@ -115,6 +116,9 @@ public class StudyInfoService {
                 = studyMemberRepository.findStudyMemberListByStudyInfoListJoinUserInfo(studyInfoIdList);
         Map<Long, List<UserNameAndProfileImageResponse>> studyUserInfoMap = getStudyUserInfoMap(studyMemberWithUserInfoResponses);
 
+        List<StudyInfoListWithMemberResponse> withMemberResponses =
+                convertToWithMemberResponse(studyInfoListResponse, studyUserInfoMap);
+
 
         // Map<STUDY_INFO_ID, List<STUDY_CATEGORY_NAME>>
         List<CategoryResponseWithStudyId> categoryResponseWithStudyIdList
@@ -123,8 +127,7 @@ public class StudyInfoService {
 
 
         StudyInfoListAndCursorIdxResponse response = StudyInfoListAndCursorIdxResponse.builder()
-                .studyInfoList(studyInfoListResponse)
-                .studyUserInfoMap(studyUserInfoMap)
+                .studyInfoList(withMemberResponses)
                 .studyCategoryMappingMap(studyCategoryMappingMap)
                 .build();
         response.setNextCursorIdx();
@@ -209,7 +212,7 @@ public class StudyInfoService {
                         .studyInfoId(studyInfo.getId())
                         .studyCategoryId(categoryId)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         studyCategoryMappingRepository.saveAll(studyCategoryMapping);
         return categoriesId;
@@ -252,5 +255,17 @@ public class StudyInfoService {
                     log.warn(">>>> {} : {} <<<<", studyInfoId, ExceptionMessage.STUDY_INFO_NOT_FOUND.getText());
                     return new StudyInfoException(ExceptionMessage.STUDY_INFO_NOT_FOUND);
                 });
+    }
+
+    public static List<StudyInfoListWithMemberResponse> convertToWithMemberResponse(
+            List<StudyInfoListResponse> studyInfoListResponses,
+            Map<Long, List<UserNameAndProfileImageResponse>> userInfoMap) {
+
+        return studyInfoListResponses.stream()
+                .map(studyInfo -> {
+                    List<UserNameAndProfileImageResponse> userInfo = userInfoMap.getOrDefault(studyInfo.getId(), new ArrayList<>());
+                    return StudyInfoListWithMemberResponse.from(studyInfo, userInfo);
+                })
+                .collect(Collectors.toList());
     }
 }
